--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,182 @@
 body {
   margin: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f3f7ff;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.progress-bar-wrapper {
+  padding: 2rem;
+}
+
+.step-progress-bar {
+  margin: 0 0 1rem 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 1;
+}
+
+.progress-step {
+  list-style: none;
+  position: relative;
+  text-align: center;
+  flex: 1 1 auto;
+  position: relative;
+}
+
+.progress-step::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  height: 3px;
+  width: 100%;
+  right: 50%;
+  transform: translateY(-50%);
+  z-index: -1;
+  background: linear-gradient(to left, #d6dae5 50%, #932c38 50%);
+	background-size: 200% 100%;
+  background-position: right bottom;
+  transition: background-position 300ms ease-in-out;
+}
+
+.progress-step:first-child::before {
+  content: none;
+}
+
+.progress-step .step-index,
+.progress-step .step-icon {
+  background: #d6dae5;
+  border-radius: 50%;
+  height: 2.5rem;
+  width: 2.5rem;
+  border: 4px solid #f3f7ff;
+  line-height: 2.5rem;
+  display: inline-flex;
+  transform-origin: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.step-index, .step-icon {
+  transition: background-color 350ms ease;
+}
+
+.progress-step .step-label {
+  position: absolute;
+  top: 120%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.progress-step .step-label-subtitle {
+  display: block;
+}
+
+.progress-step.completed .step-icon {
+  background: #932c38;
+  color: white;
+  -webkit-animation: spring-down 400ms ease-in-out forwards;
+          animation: spring-down 400ms ease-in-out forwards;
+}
+
+.progress-step.completed .step-icon:hover {
+  background: #932c38;
+}
+
+.progress-step.current .step-index {
+  background: #932c38;
+  color: white;
+  -webkit-animation: spring-up 400ms ease forwards;
+          animation: spring-up 400ms ease forwards;
+}
+
+.progress-step.current .step-index:hover {
+  background-color: #932c38;
+}
+
+.progress-step.completed::before,
+.progress-step.current::before {
+  background-position: left bottom;
+}
+
+.step-content {
+  padding: 1rem;
+}
+
+.step-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.step-action-btn {
+  padding: 0.75rem 1rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+  font-size: 16px;
+}
+
+.action-btn-secondary {
+  border: 1px solid #d1d9eb;
+}
+
+.action-btn-secondary:hover {
+  background-color: #f3f7ff;
+  box-shadow: 0px 3px 6px 0 rgba(190, 201, 228, 0.3);
+}
+
+.action-btn-primary {
+  background: #397cf6;
+  border: 1px solid #397cf6;
+  color: white;
+}
+
+.action-btn-primary:hover {
+  background-color: #316ddb;
+  border: 1px solid #316ddb;
+  box-shadow: 0px 3px 6px 0 rgba(57, 124, 246, 0.3);
+}
+
+.step-action-btn.disabled {
+  pointer-events: none;
+  filter: opacity(0.5);
+  cursor: default;
+}
+
+@-webkit-keyframes spring-up {
+  0% { transform: scale(1); }
+  10% { transform: scale(0.975); }
+  40% { transform: scale(1.4); }
+  50%, 100% { transform: scale(1.2); }
+}
+
+@keyframes spring-up {
+  0% { transform: scale(1); }
+  10% { transform: scale(0.975); }
+  40% { transform: scale(1.4); }
+  50%, 100% { transform: scale(1.2); }
+}
+
+@-webkit-keyframes spring-down {
+  0% { transform: scale(1.2); }
+  35%, 100% { transform: scale(1); }
+}
+
+@keyframes spring-down {
+  0% { transform: scale(1.2); }
+  35%, 100% { transform: scale(1); }
 }
